--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,9 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_popup": "popup.html"
-  }
+    "default_popup": "brentify.html"
+  },
+  "permissions": [
+    "activeTab"
+  ]
 }
