--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "name": "Brentify",
   "description": "This extension changes random sentences on the page to David Brent quotes.",
   "version": "1.0",
-
-  "browser_action": {
-    "default_popup": "brentify.html"
+  "background": {
+    "scripts": ["brentify.js"]
   },
+  "browser_action": {},
   "permissions": [
     "activeTab"
   ]
