--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,12 @@
   "name": "Brentify",
   "description": "This extension changes random sentences on the page to David Brent quotes.",
   "version": "1.0",
-  "background": {
-    "scripts": ["brentify.js"]
-  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["brentify.js"]
+    }
+  ],
   "browser_action": {},
   "permissions": [
     "activeTab"
